--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "main": "./web.js",
   "dependencies" : {
     "socket.io": "0.9.5",
+    "mongoose": "3.5.7",
     "everyauth": "0.2.29",
     "nconf": "0.5.1",
     "express": "2.5.9",
     "jade": "0.26.3",
     "less": "1.3.0",
     "connect": "2.3.5",
-    "recaptcha": "1.1.0",
-    "mongoose": "latest"
+    "recaptcha": "1.1.0"
   },
   "noAnalyze": true,
   "license": "Apache",
